cambio de lugar de referencia Registraduria

--- a/Formato_Localidades.ipynb
+++ b/Formato_Localidades.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
     "for i in localidades:\n",
     "    with open(\"localidades/SinDatos/\"+str(i)+'.csv', 'w',newline='') as myfile:\n",
     "        write=csv.writer(myfile, delimiter=',')\n",
-    "        write.writerow(['Localidad:'+str(i),\"Referencia:\"])\n",
+    "        write.writerow(['Localidad:'+str(i),\"Votacion:\"])\n",
     "        for l in range (len(partidos)):\n",
     "            write.writerow([partidos[l],\"-\"])"
    ]
