--- a/localidades/Formato_Localidades.ipynb
+++ b/localidades/Formato_Localidades.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "for i in localidades:\n",
-    "    with open(\"localidades/SinDatos/\"+str(i)+'.csv', 'w',newline='') as myfile:\n",
+    "    with open(\"SinDatos/\"+str(i)+'.csv', 'w',newline='') as myfile:\n",
     "        write=csv.writer(myfile, delimiter=',')\n",
     "        write.writerow(['Localidad:'+str(i),\"Votacion:\"])\n",
     "        for l in range (len(partidos)):\n",
