Actualizacion barrios Unidos

--- a/localidades/DatosUnificados.ipynb
+++ b/localidades/DatosUnificados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -81,6 +81,7 @@
        "      <th>CARCELES</th>\n",
        "      <th>CORFERIAS</th>\n",
        "      <th>MARTIRES</th>\n",
+       "      <th>RAFAEL_URIBE_URIBE</th>\n",
        "      <th>SANTA_FE</th>\n",
        "      <th>SUMAPAZ</th>\n",
        "    </tr>\n",
@@ -93,6 +94,7 @@
        "      <td>40</td>\n",
        "      <td>1978</td>\n",
        "      <td>3708</td>\n",
+       "      <td>8668</td>\n",
        "      <td>3975</td>\n",
        "      <td>190</td>\n",
        "    </tr>\n",
@@ -103,6 +105,7 @@
        "      <td>47</td>\n",
        "      <td>1464</td>\n",
        "      <td>1563</td>\n",
+       "      <td>4020</td>\n",
        "      <td>1454</td>\n",
        "      <td>18</td>\n",
        "    </tr>\n",
@@ -113,6 +116,7 @@
        "      <td>23</td>\n",
        "      <td>554</td>\n",
        "      <td>452</td>\n",
+       "      <td>1469</td>\n",
        "      <td>486</td>\n",
        "      <td>12</td>\n",
        "    </tr>\n",
@@ -123,6 +127,7 @@
        "      <td>29</td>\n",
        "      <td>3428</td>\n",
        "      <td>3005</td>\n",
+       "      <td>9460</td>\n",
        "      <td>2969</td>\n",
        "      <td>88</td>\n",
        "    </tr>\n",
@@ -133,6 +138,7 @@
        "      <td>86</td>\n",
        "      <td>12610</td>\n",
        "      <td>6608</td>\n",
+       "      <td>17248</td>\n",
        "      <td>6713</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
@@ -143,6 +149,7 @@
        "      <td>13</td>\n",
        "      <td>1713</td>\n",
        "      <td>1472</td>\n",
+       "      <td>5558</td>\n",
        "      <td>1185</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
@@ -153,6 +160,7 @@
        "      <td>37</td>\n",
        "      <td>1780</td>\n",
        "      <td>1948</td>\n",
+       "      <td>6804</td>\n",
        "      <td>1470</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
@@ -163,6 +171,7 @@
        "      <td>54</td>\n",
        "      <td>2905</td>\n",
        "      <td>2212</td>\n",
+       "      <td>7186</td>\n",
        "      <td>3169</td>\n",
        "      <td>114</td>\n",
        "    </tr>\n",
@@ -173,6 +182,7 @@
        "      <td>44</td>\n",
        "      <td>9605</td>\n",
        "      <td>7396</td>\n",
+       "      <td>15924</td>\n",
        "      <td>5034</td>\n",
        "      <td>34</td>\n",
        "    </tr>\n",
@@ -183,6 +193,7 @@
        "      <td>1</td>\n",
        "      <td>467</td>\n",
        "      <td>584</td>\n",
+       "      <td>910</td>\n",
        "      <td>307</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -193,6 +204,7 @@
        "      <td>7</td>\n",
        "      <td>219</td>\n",
        "      <td>208</td>\n",
+       "      <td>471</td>\n",
        "      <td>328</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
@@ -203,6 +215,7 @@
        "      <td>10</td>\n",
        "      <td>2751</td>\n",
        "      <td>1536</td>\n",
+       "      <td>5549</td>\n",
        "      <td>1089</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
@@ -213,6 +226,7 @@
        "      <td>1</td>\n",
        "      <td>69</td>\n",
        "      <td>40</td>\n",
+       "      <td>158</td>\n",
        "      <td>22</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -223,6 +237,7 @@
        "      <td>1</td>\n",
        "      <td>58</td>\n",
        "      <td>48</td>\n",
+       "      <td>200</td>\n",
        "      <td>48</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -233,6 +248,7 @@
        "      <td>0</td>\n",
        "      <td>215</td>\n",
        "      <td>175</td>\n",
+       "      <td>477</td>\n",
        "      <td>179</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
@@ -243,6 +259,7 @@
        "      <td>36</td>\n",
        "      <td>4941</td>\n",
        "      <td>3123</td>\n",
+       "      <td>13344</td>\n",
        "      <td>3902</td>\n",
        "      <td>500</td>\n",
        "    </tr>\n",
@@ -253,6 +270,7 @@
        "      <td>61</td>\n",
        "      <td>4911</td>\n",
        "      <td>2806</td>\n",
+       "      <td>10474</td>\n",
        "      <td>2586</td>\n",
        "      <td>23</td>\n",
        "    </tr>\n",
@@ -263,6 +281,7 @@
        "      <td>1</td>\n",
        "      <td>36</td>\n",
        "      <td>24</td>\n",
+       "      <td>43</td>\n",
        "      <td>17</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -273,6 +292,7 @@
        "      <td>0</td>\n",
        "      <td>86</td>\n",
        "      <td>37</td>\n",
+       "      <td>112</td>\n",
        "      <td>69</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -283,6 +303,7 @@
        "      <td>7</td>\n",
        "      <td>226</td>\n",
        "      <td>124</td>\n",
+       "      <td>625</td>\n",
        "      <td>252</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -293,6 +314,7 @@
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>4</td>\n",
+       "      <td>15</td>\n",
        "      <td>7</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -303,6 +325,7 @@
        "      <td>0</td>\n",
        "      <td>18</td>\n",
        "      <td>6</td>\n",
+       "      <td>45</td>\n",
        "      <td>14</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -313,6 +336,7 @@
        "      <td>0</td>\n",
        "      <td>38</td>\n",
        "      <td>15</td>\n",
+       "      <td>57</td>\n",
        "      <td>20</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -323,6 +347,7 @@
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
+       "      <td>9</td>\n",
        "      <td>8</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -333,6 +358,7 @@
        "      <td>21</td>\n",
        "      <td>1478</td>\n",
        "      <td>963</td>\n",
+       "      <td>4531</td>\n",
        "      <td>1158</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
@@ -343,6 +369,7 @@
        "      <td>18</td>\n",
        "      <td>3244</td>\n",
        "      <td>1867</td>\n",
+       "      <td>9393</td>\n",
        "      <td>2377</td>\n",
        "      <td>48</td>\n",
        "    </tr>\n",
@@ -353,6 +380,7 @@
        "      <td>16</td>\n",
        "      <td>585</td>\n",
        "      <td>890</td>\n",
+       "      <td>4077</td>\n",
        "      <td>1116</td>\n",
        "      <td>53</td>\n",
        "    </tr>\n",
@@ -390,37 +418,37 @@
        "Nulos                            2788         929        18       3244   \n",
        "No_Marcados                       963         519        16        585   \n",
        "\n",
-       "                       MARTIRES  SANTA_FE  SUMAPAZ  \n",
-       "P_Liberal                  3708      3975      190  \n",
-       "P_Conservador              1563      1454       18  \n",
-       "P_Opcion_Ciudadana          452       486       12  \n",
-       "P_Cambio_Radical           3005      2969       88  \n",
-       "P_Alianza_Verde            6608      6713       21  \n",
-       "P_MIRA                     1472      1185        5  \n",
-       "P_de_la_U                  1948      1470        9  \n",
-       "Polo                       2212      3169      114  \n",
-       "P_Centro_Democratico       7396      5034       34  \n",
-       "P_SOMOS                     584       307        0  \n",
-       "FARC                        208       328       30  \n",
-       "Colombia_Justa_Libres      1536      1089        4  \n",
-       "SI_SE_PUEDE                  40        22        0  \n",
-       "Union_con_Fortaleza          48        48        0  \n",
-       "Todos_somos_Colombia        175       179        5  \n",
-       "Coalicion_Decencia         3123      3902      500  \n",
-       "Voto_Blanco_Nacional       2806      2586       23  \n",
-       "AICO                         24        17        0  \n",
-       "ASI                          37        69        0  \n",
-       "MAIS                        124       252        0  \n",
-       "SOBERANIA                     4         7        0  \n",
-       "MIA                           6        14        0  \n",
-       "RenovacionEtnica             15        20        1  \n",
-       "CASIYOUREN                    3         8        0  \n",
-       "Voto_Blanco_Indigena        963      1158        8  \n",
-       "Nulos                      1867      2377       48  \n",
-       "No_Marcados                 890      1116       53  "
+       "                       MARTIRES  RAFAEL_URIBE_URIBE  SANTA_FE  SUMAPAZ  \n",
+       "P_Liberal                  3708                8668      3975      190  \n",
+       "P_Conservador              1563                4020      1454       18  \n",
+       "P_Opcion_Ciudadana          452                1469       486       12  \n",
+       "P_Cambio_Radical           3005                9460      2969       88  \n",
+       "P_Alianza_Verde            6608               17248      6713       21  \n",
+       "P_MIRA                     1472                5558      1185        5  \n",
+       "P_de_la_U                  1948                6804      1470        9  \n",
+       "Polo                       2212                7186      3169      114  \n",
+       "P_Centro_Democratico       7396               15924      5034       34  \n",
+       "P_SOMOS                     584                 910       307        0  \n",
+       "FARC                        208                 471       328       30  \n",
+       "Colombia_Justa_Libres      1536                5549      1089        4  \n",
+       "SI_SE_PUEDE                  40                 158        22        0  \n",
+       "Union_con_Fortaleza          48                 200        48        0  \n",
+       "Todos_somos_Colombia        175                 477       179        5  \n",
+       "Coalicion_Decencia         3123               13344      3902      500  \n",
+       "Voto_Blanco_Nacional       2806               10474      2586       23  \n",
+       "AICO                         24                  43        17        0  \n",
+       "ASI                          37                 112        69        0  \n",
+       "MAIS                        124                 625       252        0  \n",
+       "SOBERANIA                     4                  15         7        0  \n",
+       "MIA                           6                  45        14        0  \n",
+       "RenovacionEtnica             15                  57        20        1  \n",
+       "CASIYOUREN                    3                   9         8        0  \n",
+       "Voto_Blanco_Indigena        963                4531      1158        8  \n",
+       "Nulos                      1867                9393      2377       48  \n",
+       "No_Marcados                 890                4077      1116       53  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
