Incluyendo potencial votantes por localidad

--- a/localidades/DatosUnificados.ipynb
+++ b/localidades/DatosUnificados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -47,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "#Algoritmo que ingresa los datos a la tabla, la tabla solo contiene las localidades reportadas.\n",
-    "Index=('P_Liberal','P_Conservador','P_Opcion_Ciudadana','P_Cambio_Radical','P_Alianza_Verde','P_MIRA','P_de_la_U','Polo','P_Centro_Democratico','P_SOMOS','FARC','Colombia_Justa_Libres','SI_SE_PUEDE',\"Union_con_Fortaleza\",\"Todos_somos_Colombia\",'Coalicion_Decencia','Voto_Blanco_Nacional','AICO','ASI','MAIS','SOBERANIA','MIA','RenovacionEtnica','CASIYOUREN','Voto_Blanco_Indigena','Nulos','No_Marcados',\"Referencia\")\n",
+    "Index=('P_Liberal','P_Conservador','P_Opcion_Ciudadana','P_Cambio_Radical','P_Alianza_Verde','P_MIRA','P_de_la_U','Polo','P_Centro_Democratico','P_SOMOS','FARC','Colombia_Justa_Libres','SI_SE_PUEDE',\"Union_con_Fortaleza\",\"Todos_somos_Colombia\",'Coalicion_Decencia','Voto_Blanco_Nacional','AICO','ASI','MAIS','SOBERANIA','MIA','RenovacionEtnica','CASIYOUREN','Voto_Blanco_Indigena','Nulos','No_Marcados',\"Potencial votantes\", \"Referencia\")\n",
     "for i in localidades:\n",
     "    temp=pd.read_csv(\"Votaciones_localidades/\"+str(i))\n",
     "    temp.index = Index\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -384,6 +384,17 @@
        "      <td>1116</td>\n",
        "      <td>53</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Potencial votantes</th>\n",
+       "      <td>256913</td>\n",
+       "      <td>44226</td>\n",
+       "      <td>1165</td>\n",
+       "      <td>469320</td>\n",
+       "      <td>89423</td>\n",
+       "      <td>256913</td>\n",
+       "      <td>90533</td>\n",
+       "      <td>2938</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -417,6 +428,7 @@
        "Voto_Blanco_Indigena             1546         486        21       1478   \n",
        "Nulos                            2788         929        18       3244   \n",
        "No_Marcados                       963         519        16        585   \n",
+       "Potencial votantes             256913       44226      1165     469320   \n",
        "\n",
        "                       MARTIRES  RAFAEL_URIBE_URIBE  SANTA_FE  SUMAPAZ  \n",
        "P_Liberal                  3708                8668      3975      190  \n",
@@ -445,10 +457,11 @@
        "CASIYOUREN                    3                   9         8        0  \n",
        "Voto_Blanco_Indigena        963                4531      1158        8  \n",
        "Nulos                      1867                9393      2377       48  \n",
-       "No_Marcados                 890                4077      1116       53  "
+       "No_Marcados                 890                4077      1116       53  \n",
+       "Potencial votantes        89423              256913     90533     2938  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
