--- a/localidades/Formato_Localidades.ipynb
+++ b/localidades/Formato_Localidades.ipynb
@@ -28,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "localidades=('USAQUEN','CHAPINERO','SANTA_FE','SAN_CRISTOBAL','USME','TUNJUELITO','BOSA','KENNEDY','FONTIBON','ENGATIVA','SUBA','BARRIOS_UNIDOS','TEUSAQUILLO','MARTIRES','ANTONIO_NARINO','PUENTE ARANDA','CANDELARIA','RAFAEL_URIBE_URIBE','CIUDAD_BOLIVAR','SUMAPAZ','CORFERIAS','CARCELES')\n",
+    "localidades=('USAQUEN','CHAPINERO','SANTA_FE','SAN_CRISTOBAL','USME','TUNJUELITO','BOSA','KENNEDY','FONTIBON','ENGATIVA','SUBA','BARRIOS_UNIDOS','TEUSAQUILLO','MARTIRES','ANTONIO_NARINO','PUENTE_ARANDA','CANDELARIA','RAFAEL_URIBE_URIBE','CIUDAD_BOLIVAR','SUMAPAZ','CORFERIAS','CARCELES')\n",
     "partidos=('P_Liberal','P_Conservador','P_Opcion_Ciudadana','P_Cambio_Radical','P_Alianza_Verde','P_MIRA','P_de_la_U','Polo','P_Centro_Democratico','P_SOMOS','FARC','Colombia_Justa_Libres','SI_SE_PUEDE',\"Union_con_Fortaleza\",\"Todos_somos_Colombia\",'Coalicion_Decencia','Voto_Blanco_Nacional','AICO','ASI','MAIS','SOBERANIA','MIA','RenovacionEtnica','CASIYOUREN','Voto_Blanco_Indigena','Nulos','No_Marcados','Potencial Votantes', 'Referencia:')"
    ]
   },
