Agregar totalizados SIN CIUDAD BOLIVAR

--- a/localidades/DatosUnificados.ipynb
+++ b/localidades/DatosUnificados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -42,12 +42,12 @@
     "for i in localidades:\n",
     "    Nombreslocalidades.append(i[:-7])\n",
     "df1 = pd.DataFrame(columns=[Nombreslocalidades])\n",
-    "df1= df1.rename_axis(None)"
+    "df1= df1.rename_axis(None)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -62,96 +62,63 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "P_Liberal                 6.131043\n",
-       "P_Conservador             4.074415\n",
-       "P_Opcion_Ciudadana        1.129080\n",
-       "P_Cambio_Radical          7.809012\n",
-       "P_Alianza_Verde          22.525637\n",
-       "P_MIRA                    4.525689\n",
-       "P_de_la_U                 4.586081\n",
-       "Polo                      6.285812\n",
-       "P_Centro_Democratico     19.164078\n",
-       "P_SOMOS                   0.978314\n",
-       "FARC                      0.413881\n",
-       "Colombia_Justa_Libres     4.631268\n",
-       "SI_SE_PUEDE               0.085860\n",
-       "Union_con_Fortaleza       0.136413\n",
-       "Todos_somos_Colombia      0.383515\n",
-       "Coalicion_Decencia        9.052103\n",
-       "Voto_Blanco_Nacional      8.087800\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#Porcentaje voto valido con datos escrutados\n",
-    "a=df1.sum(axis=1)[:-11]\n",
-    "b=a.sum()\n",
-    "c=100*a/b\n",
-    "c"
+    "## Base de datos completa"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "P_Liberal                143958\n",
-       "P_Conservador             95668\n",
-       "P_Opcion_Ciudadana        26511\n",
-       "P_Cambio_Radical         183357\n",
-       "P_Alianza_Verde          528906\n",
-       "P_MIRA                   106264\n",
-       "P_de_la_U                107682\n",
-       "Polo                     147592\n",
-       "P_Centro_Democratico     449976\n",
-       "P_SOMOS                   22971\n",
-       "FARC                       9718\n",
-       "Colombia_Justa_Libres    108743\n",
-       "SI_SE_PUEDE                2016\n",
-       "Union_con_Fortaleza        3203\n",
-       "Todos_somos_Colombia       9005\n",
-       "Coalicion_Decencia       212545\n",
-       "Voto_Blanco_Nacional     189903\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "#Suma el total de cada Item en Bogotá y genera un archivo CSV con la información\n",
+    "df1[\"Total Bogota\"]=df1.sum(axis=1)\n",
     "df1.to_csv(\"../Votacion_Bogota_Unificada.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "## Circunscripcion nacional"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dfn=df1[:-11]\n",
+    "dfn.to_csv(\"../Circunscripcion_Nacional_Bogota.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Circunscripcion Indigena"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dfi=df1[-11:-3]\n",
+    "dfi.to_csv(\"../Circunscripcion_Indigena_Bogota.csv\")"
    ]
   },
   {
