Datos por circunscripciones, totalizados y participacion

--- a/localidades/DatosUnificados.ipynb
+++ b/localidades/DatosUnificados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -41,13 +41,13 @@
     "Nombreslocalidades=[]\n",
     "for i in localidades:\n",
     "    Nombreslocalidades.append(i[:-7])\n",
-    "df1 = pd.DataFrame(columns=[Nombreslocalidades])\n",
-    "df1= df1.rename_axis(None)\n"
+    "df = pd.DataFrame(columns=[Nombreslocalidades])\n",
+    "df= df.rename_axis(None)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +58,7 @@
     "for i in localidades:\n",
     "    temp=pd.read_csv(\"Votaciones_localidades/\"+str(i))\n",
     "    temp.index = Index\n",
-    "    df1[str(i[:-7])] = temp.iloc[:-1,1].apply(pd.to_numeric)"
+    "    df[str(i[:-7])] = temp.iloc[:-1,1].apply(pd.to_numeric)"
    ]
   },
   {
@@ -70,15 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "#Suma el total de cada Item en Bogotá y genera un archivo CSV con la información\n",
-    "df1[\"Total Bogota\"]=df1.sum(axis=1)\n",
-    "df1.to_csv(\"../Bogota/Votacion_Bogota_Unificada.csv\")"
+    "dc=df.copy()\n",
+    "\n",
+    "dc[\"Total Bogota\"]=dc.sum(axis=1)\n",
+    "dc.to_csv(\"../Bogota/Votacion_Bogota_Unificada.csv\")"
    ]
   },
   {
@@ -92,13 +94,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "dfn=df1[:-11]\n",
+    "#Suma el total de cada Item en Bogotá y genera un archivo CSV con la información de votos en circunscripcion nacional\n",
+    "dfn=df[:-11].copy()\n",
+    "dfn[\"Total Bogota\"]=dfn.sum(axis=1)\n",
     "dfn.to_csv(\"../Bogota/Circunscripcion_Nacional_Bogota.csv\")"
    ]
   },
@@ -111,15 +115,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "dfi=df1[-11:-3]\n",
+    "#Suma el total de cada Item en Bogotá y genera un archivo CSV con la información de votos en circunscripcion indigena\n",
+    "dfi=df[-11:-3].copy()\n",
+    "dfi[\"Total Bogota\"]=dfi.sum(axis=1)\n",
     "dfi.to_csv(\"../Bogota/Circunscripcion_Indigena_Bogota.csv\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Datos Participacion\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#calcula los votantes validos en circunscripcion nacional\n",
+    "Votantes_nacional=dfn.sum(axis=0).copy()\n",
+    "#calcula los votantes validos en circunscripcion indigena\n",
+    "Votantes_indigena=dfi.sum(axis=0).copy()\n",
+    "#Copia votos nulos y no marcados\n",
+    "dfp=df[-3:-1].copy()\n",
+    "\n",
+    "#Agrega los datos de votantes validos\n",
+    "dfp[\"Total Bogota\"]=dfp.sum(axis=1)\n",
+    "Votantes_nacional.name='Votos validos Circuns. Nacional'\n",
+    "Votantes_indigena.name='Votos validos Circuns. Indigena'\n",
+    "dfp=dfp.append([Votantes_indigena,Votantes_nacional]).copy()\n",
+    "\n",
+    "#Con todos los datos suma para determinar numero de votantes, es decir votos validos, nulos y no marcados sumados.\n",
+    "Votantes=dfp.sum(axis=0)\n",
+    "Votantes.name='Total Votantes*Validos+Nulos+No Marcados*'\n",
+    "\n",
+    "#Agrega datos de potencial de votantes, es decir numero de ciudadanos habilitados para votar\n",
+    "potencial=dc.loc[\"Potencial votantes\"].copy()\n",
+    "dfp=dfp.append([Votantes,potencial]).copy()\n",
+    "\n",
+    "dfp.to_csv(\"../Bogota/Participacion_bogota.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
