error corregido en Antonio Nariño y porcentaje votantes incluido

--- a/localidades/DatosUnificados.ipynb
+++ b/localidades/DatosUnificados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -162,7 +162,13 @@
     "#Agrega datos de potencial de votantes, es decir numero de ciudadanos habilitados para votar\n",
     "potencial=dc.loc[\"Potencial votantes\"].copy()\n",
     "dfp=dfp.append([Votantes,potencial]).copy()\n",
+    "Porcen_votantes=((100*dfp.loc[\"Total Votantes*Validos+Nulos+No Marcados*\"]/dfp.loc[\"Potencial votantes\"])).copy()\n",
     "\n",
+    "##formato para 2 cifras significativas en porcentaje votantes\n",
+    "Porcen_votantes.name=\"Porcentaje votantes(%)\"\n",
+    "dfp=dfp.append(Porcen_votantes).copy()\n",
+    "formato= lambda x: format(x,'.2f')\n",
+    "dfp.loc[\"Porcentaje votantes(%)\"]=dfp.loc['Porcentaje votantes(%)'].apply(formato)\n",
     "dfp.to_csv(\"../Bogota/Participacion_bogota.csv\")"
    ]
   },
